--- a/package.xml
+++ b/package.xml
@@ -2,12 +2,12 @@
 <package>
   <name>ls01g</name>
   <version>0.0.0</version>
-  <description>The ls01g laser package</description>
+  <description>The laser package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="yutong@todo.todo">yutong</maintainer>
+  <maintainer email="chaos@todo.todo">chaos</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
